--- a/assets/template-collection.css
+++ b/assets/template-collection.css
@@ -95,5 +95,11 @@
 }
 
 .collection__view-all a:not(.link) {
-  margin-top: 1rem;
+  margin-top: 64px;
+  text-transform: uppercase;
+  font-size: 22px;
+  font-family: var(--metallophile);
+  letter-spacing: 0.66px;
+  min-width: 240px;
+  height: 56px;
 }
